style.css
@import url("https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Rubik:wght@300&display=swap");

/* Boiler Plate */
:root {
  --mobile-width: 23.438rem;
  --desktop-width: 90rem;

  --color-very-dark-grey: hsl(0, 0%, 17%);
  --color-dark-grey: hsl(0, 0%, 59%);

  --font-family-rubik: "Rubik", sans-serif;
  --font-weight-bold: 400;
  --font-weight-bolder: 500;
  --font-weight-boldest: 700;

  --border-radius: 0.5rem;
  --margin-min: 2rem;
}

html {
  font-size: 16px;
  font-family: var(--font-family-rubik);
}

body {
  background-image: url("./images/pattern-bg-mobile.png");
  background-repeat: no-repeat;
  background-size: cover;

  height: 100vh;
  margin: 0;
  overflow: hidden;
}

@media (min-width: 376px) {
  body {
    background-image: url("./images/pattern-bg-desktop.png");
  }
}

/* Tags */
h2,
h4 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

input[type="text"] {
  height: 3rem;
  padding: 0 0 0 1rem;
  border-radius: var(--border-radius);
  border: none;

  font-size: 18px;
}

button {
  height: 3rem;
  padding-left: 1rem;
  padding-right: 1rem;
  background-color: black;
  border-radius: var(--border-radius);
  border: none;

  color: white;
}

button:hover {
  background-color: var(--color-dark-grey);
}

/* Top Heading */
.tracker-heading {
  text-align: center;
  color: white;
}

/* Submit IP Address */
.get-info {
  display: flex;
  align-items: stretch;
  justify-content: center;

  margin: 1.5rem 2rem 1.5rem 2rem;
}
.get-info__input {
  cursor: pointer;
  width: 100%;
  max-width: 25rem;
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.get-info__input:active {
}

.get-info__submit {
  cursor: pointer;
  border-top-left-radius: 0 !important;
  border-bottom-left-radius: 0 !important;

  width: 3rem;
}

.get-info__submit--icon {
  height: auto;
  width: 0.5rem;
}

/* IP Location */
.ip-location{
  position: relative;
  z-index: 1;
  display: flex;
  flex-direction: column;
  align-items: center;

  background-color: white;
  border-radius: var(--border-radius);

  margin: 1.5rem 2rem 1.5rem 2rem;
  padding: 1rem;
}

.ip-location__stat--heading,
.ip-location__stat--info{
  text-align: center;
}

.ip-location__stat--heading{
  color: var(--color-dark-grey);
}

.ip-location__stat--info{
  word-wrap: break-word;
}

.ip-location__divider{
  display: none;
  height: 4rem;
}

@media (min-width: 376px) {
  .ip-location{
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;

    max-width: 80rem;
    margin-left: auto;
    margin-right: auto;
    padding-right: 15rem;
  }
  .ip-location__divider{
    display: block;
  }
}

/* Map */
#map{
  z-index: 0;
  width: 100%;
  height: 100vh;
  transform: translate(0, -13rem);
}

@media (min-width: 376px) {
  #map{
    transform: translate(0, -5rem);
  }
}

